refined CSS further and worked with Alex B. to find and squash bugs in the HTML

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav { /* changed 'div' to 'nav' */
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul { /* changed 'div' to 'nav' */
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li { /* changed 'div' to 'nav' */
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,11 +86,11 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-group { /* changed name from benefit-lead */
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* coded out redundancies
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,12 +100,12 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
+*/ 
+.benefit-group h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* coded out redundancies
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,13 +115,13 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-lead img {
+*/
+.benefit-group img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* coded out redundancies
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -133,8 +133,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
+*/ 
+.seo-group {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -142,7 +142,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* coded out redundancies
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,11 +160,11 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.search-engine-optimization img {
+*/
+.seo-group img {
     max-height: 200px;
 }
-
+/* coded out redundancies
 .online-reputation-management img {
     max-height: 200px;
 }
@@ -172,12 +172,12 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.search-engine-optimization h2 {
+*/
+.seo-group h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* coded out redundancies
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -187,7 +187,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+*/
 .footer {
     padding: 30px;
     clear: both;
